gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test15672.d
version https://git-lfs.github.com/spec/v1
oid sha256:1b9056e4388ad3fb1bb9636845f859e1581fa7fb4bbf42a0b44fce9ee85a45eb
size 570
